--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <div class="search-page">
+      <form action="">
+        <input
+          type="text"
+          placeholder="Search images..."
+          class="search-placeholder"
+        />
+        <button type="submit" class="search-btn">Search</button>
+      </form>
+    </div>
+
+    <div class="gallery"></div>
+    <div class="loader" style="display: none">Loading...</div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
